# nix-eval-jobs-rs

./: .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  nix-vm-tests.yml  release.yml
bench/: README.md  bench.sh  equiv.sh  fixture.nix  results.md
crates/evix/: Cargo.toml  build.rs
crates/evix-cli/: Cargo.toml
crates/evix-cli/src/: args.rs  main.rs
crates/evix-cli/tests/: eval.rs
crates/evix-daemon/: Cargo.toml
crates/evix-daemon/src/: lib.rs
crates/evix-protocol/: Cargo.toml
crates/evix-protocol/src/: lib.rs
crates/evix/schema/: worker.capnp
crates/evix/src/: async_master.rs  error.rs  eval.rs  json.rs  lib.rs  remote.rs  remote_proto.rs  remote_worker.rs  run.rs  serde_config.rs  session.rs  state.rs  watch.rs  worker.rs  worker_config.rs  worker_process.rs
crates/evix/src/async_master/: tests.rs
crates/evix/tests/: session.rs
nix/: module.nix  package.nix  shell.nix
nix/tests/: eval.nix
src/: eval.rs  lib.rs  main.rs  master.rs  worker.rs
