[workspace]
default-members = [ "crates/evix-cli" ]
members         = [ "crates/*" ]
resolver        = "3"

[workspace.package]
edition      = "2024"
license      = "EUPL-1.2"
repository   = "https://github.com/manic-systems/evix"
rust-version = "1.90.0"
version      = "0.3.3"

[workspace.dependencies]
# Workspace components
evix          = { path = "crates/evix", version = "0.3.3" }
evix-daemon   = { path = "crates/evix-daemon", version = "0.3.3" }
evix-protocol = { path = "crates/evix-protocol", version = "0.3.3" }

# Other dependencies
anyhow             = "1.0.102"
futures-channel    = "0.3.32"
futures-core       = "0.3.32"
futures-util       = "0.3.32"
libc               = "0.2.186"
nix-bindings       = { version = "0.2347.4", features = [ "full" ] }
notify             = "8.2.0"
pound              = "0.1.6"
serde              = { version = "1.0.228", features = [ "derive" ] }
serde_json         = "1.0.150"
tokio              = { version = "1.52.3", features = [ "io-util", "process", "rt", "sync", "time" ] }
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }
