[workspace]
default-members = [ "crates/evix-cli" ]
members         = [ "crates/*" ]
resolver        = "3"

[workspace.package]
edition      = "2024"
license      = "EUPL-1.2"
repository   = "https://github.com/manic-systems/evix"
rust-version = "1.90.0"
version      = "1.0.1"

[workspace.dependencies]
# Workspace components
evix          = { path = "crates/evix", version = "1.0.1" }
evix-daemon   = { path = "crates/evix-daemon", version = "1.0.1" }
evix-protocol = { path = "crates/evix-protocol", version = "1.0.1" }

# Other dependencies
anyhow = "1.0.102"
capnp = "0.26.0"
capnp-futures = "0.26.0"
capnpc = "0.26.0"
color-eyre = { version = "0.6.5", default-features = false }
futures-channel = "0.3.32"
futures-core = "0.3.32"
futures-util = "0.3.32"
libc = "0.2.186"
nix-bindings = { version = "0.2347.4", features = [ "full" ] }
notify = "8.2.0"
pound = "0.1.6"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [
  "io-std",
  "io-util",
  "net",
  "process",
  "rt",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.18", features = [ "compat" ] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }
