[package]
name                   = "evix-cli"
description            = "Command line tools for evix"
edition.workspace      = true
version.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
anyhow.workspace             = true
color-eyre.workspace         = true
evix.workspace               = true
evix-daemon.workspace        = true
evix-protocol.workspace      = true
futures-util.workspace       = true
pound.workspace              = true
serde_json.workspace         = true
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true

[[bin]]
name = "evix"
path = "src/main.rs"
