[package]
name                   = "evix-protocol"
description            = "Daemon and worker protocol types for evix"
edition.workspace      = true
version.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
evix.workspace       = true
serde.workspace      = true
serde_json.workspace = true
