[package]
name                   = "evix"
description            = "Library-first async Nix evaluation engine"
edition.workspace      = true
version.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[features]
default = [ "flake" ]
flake   = [ "nix-bindings/flake" ]

[dependencies]
anyhow.workspace          = true
capnp.workspace           = true
capnp-futures.workspace   = true
futures-channel.workspace = true
futures-core.workspace    = true
futures-util.workspace    = true
libc.workspace            = true
nix-bindings.workspace    = true
notify.workspace          = true
serde.workspace           = true
serde_json.workspace      = true
tokio.workspace           = true
tokio-util.workspace      = true
tracing.workspace         = true

[build-dependencies]
capnpc.workspace = true

[[test]]
name = "session"
path = "tests/session.rs"
harness = false
